--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ DATABASE_URL="mysql://root:root@127.0.0.1:8889/testSymfo?serverVersion=8&charset
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+ MAILER_DSN=smtp://1b6094bfb3945c:627afb25ac12e0@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
